# Resume-Evaluator

./: .env  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
